--- a/snippets/editor/code.scss
+++ b/snippets/editor/code.scss
@@ -161,19 +161,21 @@ body .markdown-rendered pre {
 }
 
 body.code-nowrap {
-  &.scrollbar-gutter-overlay {
+  &.scrollbar-gutter-overlay pre {
+    padding-bottom: calc(var(--code-size) * var(--line-height-normal) * 0.5 - var(--size-4-2)) !important;
 
-    pre {
-      padding-bottom: calc(var(--code-size) * var(--line-height-normal) * 0.5 - var(--size-4-2)) !important;
-
-      code {
-        padding-bottom: var(--size-4-2);
-      }
+    code {
+      padding-bottom: var(--size-4-2);
     }
   }
 
-  code,
-  pre {
+  code {
+    word-break: normal;
+    word-wrap: break-word;
+    white-space: pre;
+  }
+
+  .token {
     white-space: nowrap;
   }
 }
